assets/css/style.css
/* ... */
.services-content .content-top .title {
    margin-bottom: 0;
    font-size: 20px;
    font-weight: 700;
}

.services-thumb {
    position: relative;
    border-radius: 10px;
    overflow: hidden;
    margin-bottom: 25px;
}

.services-thumb::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: #33b6ff;
    opacity: 0;
    transition: .3s linear;
}

.services-item:hover .services-thumb::before {
    opacity: .8;
}

.services-thumb .btn {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    background: transparent;
    border-color: #fff;
    margin-top: -100px;
    opacity: 0;
    visibility: hidden;
    color: #fff;
}

.services-thumb .btn::before {
    background: #fff;
}

.services-thumb .btn::after {
    color: #fff;
}

.services-thumb .btn:hover {
    color: #fff;
}

.services-item:hover .services-thumb .btn {
    opacity: 1;
    visibility: visible;
    margin-top: 0;
}

.services-content .list-wrap li {
    color: var(--tg-paragraph-color);
    display: flex;
    align-items: center;
    margin-bottom: 5px;
    text-align: justify;
    line-height: 25px;
    font-size: 17px;
}

.services-content .list-wrap li:last-child {
    margin-bottom: 0;
    font-weight: 400;
    font-family: var(--body-font);
    text-align: justify;
}

.services-active [class*="col-"] {
    padding: 0 15px;
}

.services-active .slick-dots {
    display: flex;
    padding: 0;
    margin: 0;
    justify-content: center;
    gap: 10px;
    margin-top: 15px;
}

.services-active .slick-dots li {
    list-style: none;
    line-height: 0;
}

.services-active .slick-dots li button {
    text-indent: -9999999999px;
    padding: 0;
    border: 2px solid #e6eeff;
    border-radius: 50%;
    width: 15px;
    height: 15px;
    background: transparent;
}

.services-active .slick-dots li.slick-active button {
    border-color: #33b6ff;
    background: #33b6ff;
}

.services-bg-two {
    background-size: cover;
    background-position: center;
    padding: 120px 0 90px;
}

.services-item-two {
    position: relative;
    margin-bottom: 30px;
}

.services-thumb-two {
    position: relative;
    border-radius: 8px;
    border: 7px solid #fff;
    box-shadow: 0px 10px 30px #CED2DD;
    overflow: hidden;
    z-index: 1;
}

.services-thumb-two::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(360deg, #00194C 11.66%, rgba(0, 25, 76, 0) 65.89%);
}

.services-thumb-two::after {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(360deg, rgb(0 25 76 / 55%) 52.77%, rgba(0, 25, 76, 0) 100%, #00194C 100%);
    transition: .3s linear;
    opacity: 0;
}

.services-item-two:hover .services-thumb-two::after {
    opacity: 1;
}

.services-thumb-two img {
    width: 100%;
}

.services-thumb-two .item-shape {
    position: absolute;
    right: 0;
    top: 0;
    margin-top: -50px;
    transition: .3s linear;
    opacity: 0;
}

.services-item-two:hover .services-thumb-two .item-shape {
    margin-top: 0;
    opacity: 1;
}

.services-content-two {
    position: absolute;
    left: 30px;
    right: 30px;
    bottom: 25px;
    z-index: 2;
}

.services-content-two .icon {
    width: 55px;
    height: 55px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 36px;
    line-height: 0;
    background: rgb(255 255 255 / 20%);
    border-radius: 8px;
    color: #fff;
    margin-bottom: 15px;
    transition: .3s linear;
}

.services-item-two:hover .services-content-two .icon {
    background: #33b6ff;
}

.services-content-two .title {
    margin-bottom: 10px;
    font-size: 24px;
    color: #fff;
}

.services-content-two p {
    margin-bottom: 5px;
    color: #e6eeff;
    display: none;
}

.menu-extend.extend-colss {
    margin-top: 5px;
}

@media(min-width:991px) {
    .service-area2 .services-content {
        height: 455px;
    }
}

.header-sections .navbar {
    background: #ffffff;
}

nav.navbar.navbar-expand-lg a.show img.img-fluid {
    display: none;
}

nav.navbar.navbar-expand-lg a.hides img.img-fluid {
    display: none;
}

.navbar.fixed-top a#submenu {
    display: none;
}

.navbar a#submenu {
    display: none;
}

.navbar:not(.fixed-top) a.navbar-brand.static-logo img.img-fluid {
    width: 200px;
}

@media (min-width: 992px) {
    .header-sections .navbar .nav-item .nav-link {
        color: #000;
    }
}

.slider {
    margin: 0 auto;
    max-width: 940px;
}

.slide_viewer {
    height: 340px;
    overflow: hidden;
    position: relative;
}

.slide_group {
    height: 100%;
    position: relative;
    width: 100%;
}

.slide {
    display: none;
    height: 100%;
    position: absolute;
    width: 100%;
}

.slide:first-child {
    display: block;
}

.slide:nth-of-type(1) {
    background: #D7A151;
}

.slide:nth-of-type(2) {
    background: #F4E4CD;
}

.slide:nth-of-type(3) {
    background: #C75534;
}

.slide:nth-of-type(4) {
    background: #D1D1D4;
}

.slide_buttons {
    left: 0;
    position: absolute;
    right: 0;
    text-align: center;
}

a.slide_btn {
    color: #474544;
    font-size: 42px;
    margin: 0 0.175em;
    -webkit-transition: all 0.4s ease-in-out;
    -moz-transition: all 0.4s ease-in-out;
    -ms-transition: all 0.4s ease-in-out;
    -o-transition: all 0.4s ease-in-out;
    transition: all 0.4s ease-in-out;
}

.slide_btn.active,
.slide_btn:hover {
    color: #428CC6;
    cursor: pointer;
}

.directional_nav {
    height: 340px;
    margin: 0 auto;
    max-width: 940px;
    position: relative;
    top: -340px;
}

.previous_btn {
    bottom: 0;
    left: 100px;
    margin: auto;
    position: absolute;
    top: 0;
}

.next_btn {
    bottom: 0;
    margin: auto;
    position: absolute;
    right: 100px;
    top: 0;
}
/* ... */

